--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,7 +15,8 @@ android {
     }
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
+            shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
@@ -28,8 +29,6 @@ android {
 
 ext.arch_comp_version='1.1.1'
 ext.dagger2_version='2.17'
-ext.retrofit_version='2.4.0'
-ext.room_version='1.1.0'
 ext.support_lib_version='28.0.0'
 
 dependencies {
@@ -48,8 +47,8 @@ dependencies {
     //Rx LiveData bridge
     implementation "android.arch.lifecycle:reactivestreams:$arch_comp_version"
     //Rx
-    implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
-    implementation 'io.reactivex.rxjava2:rxjava:2.2.0'
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.2'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
     implementation 'io.reactivex.rxjava2:rxkotlin:2.2.0'
     //RxPermission
     implementation 'com.tbruyelle.rxpermissions2:rxpermissions:0.9.5@aar'
@@ -62,4 +61,12 @@ dependencies {
     implementation "com.google.dagger:dagger-android:$dagger2_version"
     implementation "com.google.dagger:dagger-android-support:$dagger2_version"
     kapt "com.google.dagger:dagger-android-processor:$dagger2_version"
+    //Crashlytics
+    implementation 'com.crashlytics.sdk.android:crashlytics:2.9.5'
+    //Firebase Analytics
+    implementation 'com.google.firebase:firebase-core:16.0.3'
 }
+
+// Leave this at the bottom
+// TODO: Uncomment this in a real project and follow the procedure to create valid app/google-services.json
+//apply plugin: 'com.google.gms.google-services'
